fixed responsiveness on mobile

--- a/portfolio-website/src/components/contact/Contact.css
+++ b/portfolio-website/src/components/contact/Contact.css
@@ -22,7 +22,7 @@
     border: 2px solid white;
     padding: 20px;
     border-radius: 15px;
-    min-width: 400px!important;
+    min-width: 350px!important;
     max-width: 1000px!important;
     width: 100%;
     margin-bottom: 20px;
